Removing white spaces, to resolve errors.

--- a/src/components/Repeat/ProductsTable.css
+++ b/src/components/Repeat/ProductsTable.css
@@ -9,3 +9,7 @@
 .ProductsTable .Even {
     background-color: #445e8d;
 }
+
+.ProductsTable .Odd {
+    background-color: #e0e8f5;
+}
